# jatic-dota

./: .gitmodules  README.md  pyproject.toml  script.py  setup.py
.github/workflows/: build-wheels.yml
resources/: dota-1.0_r101_ms.yaml
src/jatic_dota/: __init__.py  __main__.py  decoder.py  download.py  geometry_utils.py  inference.py  log.py  model_weights_download.py  plot.py
src/jatic_dota/bbav/: ctrbox_net.py  model_parts.py
src/jatic_dota/dafne/: dafne.py  dafne_config.py  dafne_outputs.py  deform_conv.py  one_stage_detector.py  smooth_l1.py  sort_corners.py  utils.py
src/jatic_dota/dafne/backbone/: __init__.py  fpn.py  lpf.py  resnet_interval.py  resnet_lpf.py
src/jatic_dota/models/: resnet.py
