[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jatic_dota"
version = "0.2.0"
requires-python = ">=3.10,<3.13"
description = "A standalone distribution of BBAVectors-Oriented-Object-Detection and DAFNe for inference on the DOTA dataset."
authors = [
    { name = "Reference Implementation Team", email = "connect@quansight.com" },
]
dependencies = [
    "torch==2.4.1; platform_system in ['Darwin','Linux']",
    "torchvision==0.19.1; platform_system in ['Darwin','Linux']",
    "shapely==2.0.7",
    "pillow==11.1.0",
    "numpy==2.2.4",
    "httpx==0.28.1",
    "matplotlib==3.10.1",
    "tqdm==4.67.1",
    "opencv-python==4.12.0.88",
    "fvcore==0.1.5.post20221221",
    "tensorboard==1.15.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
    "jupyterlab",
]

[project.scripts]
jatic-dota = "jatic_dota.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "jatic_dota._vendor.detectron2.tests*",
  "jatic_dota._vendor.detectron2.docs*",
  "jatic_dota._vendor.detectron2.projects*",
]

[tool.setuptools.package-data]
jatic_dota = ["resources/*"]
"jatic_dota._vendor.detectron2" = [
  "model_zoo/configs/**/*.yaml",
  "model_zoo/configs/**/*.py",
  "layers/csrc/**/*.h",
  "layers/csrc/**/*.hpp",
  "layers/csrc/**/*.cpp",
  "layers/csrc/**/*.cu",
  "../LICENSE",
]
