[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jatic_dota"
version = "0.2.0"
requires-python = ">=3.10,<3.13"
description = "A standalone distribution of BBAVectors-Oriented-Object-Detection and DAFNe for inference on the DOTA dataset."
authors = [
    { name = "Reference Implementation Team", email = "connect@quansight.com" },
]
dynamic = ["dependencies"]


[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
    "jupyterlab",
]

[project.scripts]
jatic-dota = "jatic_dota.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "jatic_dota._vendor.detectron2.tests*",
  "jatic_dota._vendor.detectron2.docs*",
  "jatic_dota._vendor.detectron2.projects*",
]

[tool.setuptools.package-data]
jatic_dota = ["resources/*"]
"jatic_dota._vendor.detectron2" = [
  "model_zoo/configs/**/*.yaml",
  "model_zoo/configs/**/*.py",
  "layers/csrc/**/*.h",
  "layers/csrc/**/*.hpp",
  "layers/csrc/**/*.cpp",
  "layers/csrc/**/*.cu",
  "../LICENSE",
]
